--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -7,6 +7,7 @@
     }},
 
   "tab_limit_label":      { "message": "Max Tab Limit" },
+  "notify_blocked_label": { "message": "Notify when a tab is blocked" },
   "save_button_label":    { "message": "Save" },
   "default_button_label": { "message": "Back to Default" }
 }
