--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -7,6 +7,7 @@
     }},
 
   "tab_limit_label":      { "message": "タブの最大数" },
+  "notify_blocked_label": { "message": "タブが開かれなかったときに通知する" },
   "save_button_label":    { "message": "保存" },
   "default_button_label": { "message": "初期値に戻す" }
 }
